--- a/src/app/pages/torrents/torrents.component.html
+++ b/src/app/pages/torrents/torrents.component.html
@@ -77,7 +77,7 @@
           
           <div class="size-cell">
             <mat-icon class="size-icon">sd_card</mat-icon>
-            {{ torrent.size.value }} {{ torrent.size.unit }}
+            {{ torrent.size.value | bytesConverter:2 }}
           </div>
 
           <div class="health-cell">
@@ -142,7 +142,7 @@
           
           <div class="stat-item">
             <div class="stat-label">Size</div>
-            <div class="stat-value">{{ torrent.size.value }} {{ torrent.size.unit }}</div>
+            <div class="stat-value">{{ torrent.size.value | bytesConverter:2 }}</div>
           </div>
           
           <div class="stat-item">
