--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,4 @@
-/* app.component.scss */
-
-// Variables
-$primary-color: #6200ea;  // Deep purple
+$primary-color: #6200ea;
 $secondary-color: #3700b3;
 $accent-color: #03dac6;
 $text-light: #ffffff;
@@ -10,13 +7,11 @@ $divider-color: rgba(0, 0, 0, 0.12);
 $sidenav-width: 250px;
 $toolbar-height: 64px;
 
-// Global styles
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
 }
 
-// Sidenav styles
 mat-sidenav {
   width: $sidenav-width;
   background-color: $text-light;
@@ -24,7 +19,6 @@ mat-sidenav {
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
-// Toolbar/Header styles
 mat-toolbar {
   background: linear-gradient(135deg, $primary-color, $secondary-color);
   color: $text-light;
@@ -39,12 +33,12 @@ mat-toolbar {
   z-index: 1000;
 
   .menu-toggle-button {
-    display: none; // Hidden on desktop by default
+    display: none;
     margin-right: 16px;
     color: $text-light;
 
     @media (max-width: 960px) {
-      display: block; // Show on mobile
+      display: block;
     }
   }
 
@@ -73,7 +67,7 @@ mat-toolbar {
       justify-content: flex-end;
 
       @media (max-width: 960px) {
-        display: none; // Hide nav items on mobile, they'll be in the sidenav instead
+        display: none;
       }
 
       a.mat-fab.mat-extended {
@@ -104,34 +98,12 @@ mat-sidenav-content {
   background-color: #f5f5f5;
 }
 
-mat-sidenav-container{
+mat-sidenav-container {
   height: 100vh;
 }
 
-// Footer
-// app-footer {
-//   height: 50px;
-//   background-color: $secondary-color;
-//   color: $text-light;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   text-align: center;
-//   font-size: 0.9rem;
-// }
-
-// Mobile optimizations
 @media (max-width: 960px) {
   mat-toolbar {
     padding: 0 8px;
   }
-}
-
-// Custom icons for navigation items
-.icon-torrents {
-  transform: rotate(45deg);
-}
-
-.icon-hitnrun {
-  transform: scale(0.9);
 }
