--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Full viewport height */
-  background: linear-gradient(to bottom right, #3f51b5, #2196f3); /* Gradient background */
-  color: white; /* Text color */
+  height: 100vh;
+  background: linear-gradient(to bottom right, #3f51b5, #2196f3);
+  color: white;
   text-align: center;
 }
 
@@ -26,7 +26,7 @@
 .button-group {
   display: flex;
   justify-content: center;
-  gap: 16px; /* Space between buttons */
+  gap: 16px;
 }
 
 button.mat-flat-button {
